# voice-assistant-Gssoc

./: README.md  pyproject.toml
tests/: test_sentence_chunker.py  test_speculative.py  test_vad.py
voice_assistant/: main.py
voice_assistant/transport/: grpc_server.py
voice_assistant/tts/: stream.py
