[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Real-time streaming voice assistant with ASR, LLM token streaming, and chunked TTS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "voice-assistant" }]
dependencies = [
    # --- Core Utilities ---
    "python-dotenv>=1.0.1",      # Manages environment variables
    # --- Core Utilities ---
    "python-dotenv>=1.0.1",      # Manages environment variables

    # --- Audio Processing & Playback ---
    "sounddevice>=0.4.6",        # High-quality audio input/output
    "numpy>=1.26.4",              # Handles audio data as arrays
    "webrtcvad>=2.0.10",         # WebRTC Voice Activity Detector
    "silero-vad>=5.1.2",          # Silero Voice Activity Detector

    # --- AI & Machine Learning Inference ---
    "vosk>=0.3.45",               # Offline ASR engine
    "llama-cpp-python>=0.3.0",    # Local LLM runner (GGUF support)

    # --- Transport & Remote Inference (gRPC) ---
    "grpcio>=1.62.0",             # Core gRPC framework
    "grpcio-tools>=1.62.0",       # Tools for generating protobuf stubs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",              # Framework for unit testing
]

[project.optional-dependencies]
cuda = ["llama-cpp-python[cuda]>=0.3.0"]
metal = ["llama-cpp-python[metal]>=0.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
